# Dynamic-WAF-

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rules.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
brain/: Dockerfile  main.py  requirements.txt
src/: main.rs
src/firewall/: brain_client.rs  mod.rs  normalize.rs  ratelimit.rs  rules.rs  scanner.rs
tests/: attack_demo.py  integration_test.py
